--- a/deploy_app.yml
+++ b/deploy_app.yml
@@ -1,29 +1,13 @@
 - hosts: all
   become: true
+  vars:
+    dbcredentials: "{{  lookup('file', '/tmp/credentials.json') | from_json  }}"
+    infonetworks: "{{  lookup('file', './infonetwork.json') | from_json  }}"   
+
   tasks:
-  - name: Send application files do the server
-    copy:
-      dest: /tmp
-      src: ./
-      owner: ec2-user
-      group: ec2-user
-
-  - name: install python3
-    yum: 
-      name: 
-        - python36
-        - python36-pip
-      state: present
-      update_cache: yes
-  
-  - name: install app dependencies 
-    command: pip-3.6 install -r /tmp/requeriments.txt
-
-  - name: Create application table on RDS
-    command: nohup python3 /tmp/mysql_prep.py > /dev/null
-
-  - name: Run de application
-    command: bash -c " nohup python3 /tmp/app.py &"
+  - include: ./task/installreq.yml
+  - include: ./task/createdb.yml
+  - include: ./task/app.yml
 
   
   
