--- a/main.yml
+++ b/main.yml
@@ -4,9 +4,9 @@
     dbcredentials: "{{  lookup('file', './files/credentials.json') | from_json  }}"
     infonetworks: "{{  lookup('file', './infonetwork.json') | from_json  }}"   
    tasks:
- #    - include: ./task/network.yml
- #    - include: ./task/rds.yml
-      - include: ./task/instances.yml
+     - include: ./task/network.yml
+     - include: ./task/rds.yml
+     - include: ./task/instances.yml
  
 
  
